2010-10-14  Ivan Maidanski <ivmai@mail.ru>

	* darwin_stop_world.c (GC_stack_range_for): New static function
	(move the code from GC_push_all_stacks).
	* darwin_stop_world.c (GC_push_all_stacks): Call
	GC_stack_range_for(); rename kern_return local variable to
	kern_result.
	* darwin_stop_world.c (GC_is_mach_marker): Change argument type
	from mach_port_t to thread_act_t.
	* pthread_support.c (GC_is_mach_marker): Ditto.

2010-10-12  Ivan Maidanski <ivmai@mail.ru>

	* darwin_stop_world.c (GC_push_all_stacks): Fix "my_task" local
	variable initialization (always call current_task()).
	* pthread_support.c (GC_thr_init, GC_register_my_thread_inner):
	Don't set thread's stop_info.stack_ptr value for Darwin.
	* include/private/darwin_stop_world.h (thread_stop_info): Update
	the comment for stack_ptr.

2010-10-10  Ivan Maidanski <ivmai@mail.ru>

	* darwin_stop_world.c (GC_push_all_stacks): Rename "r", "me" local
	variables to "kern_return" and "my_thread" ones, respectively;
	call mach_port_deallocate() unconditionally.
	* darwin_stop_world.c (GC_stop_world): Don't call mach_thread_self
	if DEBUG_THREADS.

2010-10-09  Ivan Maidanski <ivmai@mail.ru>

	* darwin_stop_world.c (GC_mach_thread): Move from
	darwin_stop_world.h.
	* include/private/darwin_stop_world.h (GC_mach_thread): Remove.
	* win32_threads.c (GC_start_world): Define "thread_id" local
	variable only if GC_ASSERTIONS; decide whether to resume a thread
	based on its "suspended" field value; assert that suspended thread
	stack_base is non-zero and the thread is not our one.

2010-10-08  Ivan Maidanski <ivmai@mail.ru>

	* darwin_stop_world.c (GC_thread_resume): New inline function
	(move code from GC_thread_resume).
	* darwin_stop_world.c (GC_start_world): Check result of
	task_threads(); call GC_thread_resume().
	* os_dep.c (GC_malloc_heap_l, GC_is_malloc_heap_base): Define
	only if not CYGWIN32.
	* os_dep.c (GC_is_heap_base): Call GC_is_malloc_heap_base() only
	if not CYGWIN32.
